# python_uv_fastapi_based_rest_api_template

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/models/: forcast_model.py
app/utils/: preprocess.py
tests/: test_api.py
