[project]
name = "python-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "joblib>=1.4.2",
    "lightgbm>=4.5.0",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "uvicorn>=0.31.0",
]
